tests/src/frontend/typechecking/invalid/contravariance3.sk
base class A
class B() extends A

class Foo<-T>()

fun bFoo(): Foo<B> {
  Foo()
}

fun raiseFoo(): Foo<A> {
  bFoo()
}
